<resources>
    <string name="app_name">噪音地图</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_article_fragment">ArticleFragment</string>
	<string name="tab1content">tab1</string>
	<string name="shareToWeibo">分享到微博</string>
	<string name="shareToMap">上传到地图</string>
	<string name="recorderDescription">点击话筒开始测分贝</string>
	<string name="recorderDescriptionOn">测量中...</string>
	<string name="googleMapApiKey">0Lj_JYJIppF95ji0WD6XprgtLmDQnmlOKbQ4RXA</string>
</resources>