<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical" >
    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

       <TabWidget
           android:id="@android:id/tabs"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
       </TabWidget>
            <FrameLayout
		     android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:id="@android:id/tabcontent"
		     >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="463dp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/tab1content"
                    android:orientation="vertical"
                    android:paddingTop="60dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/recorderDescription"
                            android:layout_width="139dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.02"
                            android:gravity="center"
                            android:text="@string/recorderDescription" />

                        <TextView
                            android:id="@+id/recorder"
                            android:layout_width="200dp"
                            android:textSize="30dp"
                            android:textColor="@color/decibel"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.05"
                            android:gravity="center" />

                        <ImageButton
                            android:id="@+id/btnRecord"
                            android:layout_width="231dp"
                            android:layout_height="231dp"
                            android:layout_weight="0.07"
                            android:maxWidth="@dimen/padding_medium"
                            android:onClick="sendMessage"
                            android:scaleType="centerInside"
                            android:src="@drawable/microphone"
                            android:text="@string/button_send" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
      					android:layout_weight="0"
      					android:weightSum="1"
                        android:orientation="horizontal" >

					    <Button
					        android:id="@+id/btnShareToWeibo"
					        android:layout_width="wrap_content"
					        android:layout_height="fill_parent"
            				android:layout_weight="0.5"
					        android:text="@string/shareToWeibo" />
					
					    <Button
					        android:id="@+id/btnShareToMap"
					        android:layout_width="172dp"
            				android:layout_weight="0.5"
					        android:layout_height="fill_parent"
					        android:text="@string/shareToMap" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
    				android:paddingTop="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
			    	<com.google.android.maps.MapView
			    	    android:id="@+id/mapview"
				        android:layout_width="match_parent" 
				        android:layout_height="match_parent"
				        android:enabled="true"
				        android:clickable="true"
				        android:apiKey="@string/googleMapApiKey"
				        />
                </LinearLayout>
            </FrameLayout>
    </TabHost>

</LinearLayout>